[gd_scene load_steps=5 format=3 uid="uid://bw6eqmwo24u6o"]

[ext_resource type="Script" path="res://src/world/objects/passable_gate.gd" id="1_1xg4m"]
[ext_resource type="Texture2D" uid="uid://bix7wqnj02ryp" path="res://assets/gfx/world/small-gate.png" id="1_hr5fi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p5iwe"]
size = Vector2(36, 276)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ma3g3"]
size = Vector2(256, 178)

[node name="passable_gate" type="StaticBody2D"]
script = ExtResource("1_1xg4m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, -132)
shape = SubResource("RectangleShape2D_p5iwe")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -176)
texture = ExtResource("1_hr5fi")

[node name="interact_area" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact_area"]
position = Vector2(0, -79)
shape = SubResource("RectangleShape2D_ma3g3")

[node name="exit_1" type="Node2D" parent="."]
position = Vector2(-88, 0)

[node name="exit_2" type="Node2D" parent="."]
position = Vector2(88, 0)

[connection signal="body_entered" from="interact_area" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="interact_area" to="." method="_on_interact_area_body_exited"]
